# data-engineering-project

./: .env.example  .gitignore  404.html  DockerFile  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
dashboard/: public-link.txt
data/: import_auto.py
data/csv_data_simple/: companies.csv  company_reviews.csv  employment_types.csv  industries.csv  job_benefits.csv  job_skills.csv  jobs.csv  locations.csv  salary_ranges.csv  skills.csv
docs/: index.md  mkdocs.yml  public-link.txt  sobre.md
jobs/: pipeline_job.yaml
scripts/: 01_ingestion_landing.py.ipynb  02_bronze_layer.py.ipynb  03_silver_layer.py.ipynb  04_gold_layer.py.ipynb  04_prepare_to_gold.py.ipynb  05_gold_layer.py.ipynb  05_load_to_db.py.ipynb  06_load_to_db.py.ipynb
search/: search_index.json
sobre/: index.html
